--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/ejs": "^3.1.5",
     "@types/nodemailer": "^6.4.16",
+    "@types/nodemon": "^1.19.6",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
