--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/nodemon": "^1.19.6",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "ts-node": "^10.9.2",        
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -35,7 +36,9 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
