--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "ts-node server.ts",
     "dev": "nodemon --exec ts-node server.ts",
-    "build": "tsc",
-    "install": "npm install --production=false"
+    "build": "tsc"
+   
   },
   "keywords": [],
   "author": "",
